outputs/csi300-test/reevo/2025-07-28_13-42-49/problem_iter18_response0.txt_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/csi300/gpt.py", line 4
    # Calculate log returns
                           ^
IndentationError: expected an indented block after function definition on line 2
